fixes for null and polyblob handling